--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -85,6 +85,6 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
-          context: .
+          context: Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/orchestrator-app:latest
